--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "license": "BSD-3-Clause",
   "scripts": {
+    "postinstall": "mkdir node_modules/@aave/spark-utilities; cd node_modules/@aave/spark-utilities; git init; git remote add -f origin https://github.com/hexonaut/spark-utilities.git; git pull origin spark; yarn; cd packages/contract-helpers; yarn run build; cd ../../..; rm -rf contract-heleprs; ln -s spark-utilities/packages/contract-helpers contract-helpers",
     "dev": "next dev",
     "build": "next build",
     "build:analyze": "ANALYZE=true yarn build",
