--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "BSD-3-Clause",
   "scripts": {
-    "postinstall": "PROJ_CWD=`pwd` TMPDIR=`mktemp -d` cd $TMPDIR; git clone https://github.com/hexonaut/spark-utilities.git; cd spark-utilities; git checkout spark; yarn; cd packages/contract-helpers; yarn run build; cp -r ../contract-helpers ${PROJ_CWD}/node_modules/@aave/contract-helpers; cd $PROJ_CWD",
+    "postinstall": "PROJ_CWD=`pwd` TMPDIR=`mktemp -d` cd $TMPDIR; git clone https://github.com/hexonaut/spark-utilities.git; cd spark-utilities; git checkout spark; yarn; cd packages/contract-helpers; yarn run build; mkdir -p ${PROJ_CWD}/node_modules/@aave; cp -r ../contract-helpers ${PROJ_CWD}/node_modules/@aave/contract-helpers; cd $PROJ_CWD",
     "dev": "next dev",
     "build": "next build",
     "build:analyze": "ANALYZE=true yarn build",
