--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,17 +1,27 @@
 {
-  "short_name": "Aave v3",
-  "name": "Aave v3",
-  "description": "Non-custodial liquidity protocol",
-  "iconPath": "aave.svg",
+  "short_name": "Spark",
+  "name": "Spark",
+  "description": "Maker-Powered Lending Market",
+  "iconPath": "spark.svg",
   "icons": [
     {
-      "src": "favicon32.png",
+      "src": "favicon-32x32.png",
       "sizes": "32x32",
       "type": "image/png"
+    },
+    {
+        "src": "/android-chrome-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png"
+    },
+    {
+        "src": "/android-chrome-384x384.png",
+        "sizes": "384x384",
+        "type": "image/png"
     }
   ],
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#171715",
+  "background_color": "#171715"
 }
