--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_ENV=prod
-NEXT_PUBLIC_API_BASEURL=
+NEXT_PUBLIC_API_BASEURL=https://api.sparkprotocol.io
 #NEXT_PUBLIC_FORK_BASE_CHAIN_ID=1
 #NEXT_PUBLIC_FORK_CHAIN_ID=1
 #NEXT_PUBLIC_FORK_URL_RPC="https://rpc.tenderly.co/fork/1234567"
