--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ NEXT_PUBLIC_API_BASEURL=https://api.sparkprotocol.io
 #NEXT_PUBLIC_FORK_BASE_CHAIN_ID=1
 #NEXT_PUBLIC_FORK_CHAIN_ID=1
 #NEXT_PUBLIC_FORK_URL_RPC="https://rpc.tenderly.co/fork/1234567"
+NEXT_PUBLIC_ENABLE_GNOSIS=1
